// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server/lib/payments createRefundTransaction partial refunds can be done with a valid amount 1`] = `
"
| kind                    | type   | isRefund | isDebt | From           | To             | Host | amount | currency | platformFee | paymentFee | Settlement | description                                 |
| ----------------------- | ------ | -------- | ------ | -------------- | -------------- | ---- | ------ | -------- | ----------- | ---------- | ---------- | ------------------------------------------- |
| HOST_FEE                | DEBIT  | false    | false  | Wise           | Scouts d'Arlon | Wise | -250   | USD      | 0           | 0          |            | Host Fee                                    |
| HOST_FEE                | CREDIT | false    | false  | Scouts d'Arlon | Wise           | Wise | 250    | USD      | 0           | 0          |            | Host Fee                                    |
| TAX                     | DEBIT  | false    | false  | Other Tax      | Scouts d'Arlon | Wise | -100   | USD      | 0           | 0          |            | Other Tax tax                               |
| TAX                     | CREDIT | false    | false  | Scouts d'Arlon | Other Tax      | NULL | 100    | USD      | 0           | 0          |            | Other Tax tax                               |
| PAYMENT_PROCESSOR_FEE   | DEBIT  | false    | false  | Stripe         | Scouts d'Arlon | Wise | -175   | USD      | 0           | 0          |            | Stripe payment processor fee                |
| PAYMENT_PROCESSOR_FEE   | CREDIT | false    | false  | Scouts d'Arlon | Stripe         | NULL | 175    | USD      | 0           | 0          |            | Stripe payment processor fee                |
| CONTRIBUTION            | DEBIT  | false    | false  | Scouts d'Arlon | Xavier Damman  | NULL | -4750  | USD      | -250        | 0          |            | Monthly subscription to Webpack             |
| CONTRIBUTION            | CREDIT | false    | false  | Xavier Damman  | Scouts d'Arlon | Wise | 5000   | USD      | -250        | 0          |            | Monthly subscription to Webpack             |
| PAYMENT_PROCESSOR_FEE   | DEBIT  | true     | false  | Scouts d'Arlon | Stripe         | NULL | -100   | USD      | 0           | 0          |            | Refund of \\"Stripe payment processor fee\\"    |
| PAYMENT_PROCESSOR_FEE   | CREDIT | true     | false  | Stripe         | Scouts d'Arlon | Wise | 100    | USD      | 0           | 0          |            | Refund of \\"Stripe payment processor fee\\"    |
| PAYMENT_PROCESSOR_COVER | DEBIT  | true     | false  | Scouts d'Arlon | Wise           | NULL | -75    | USD      | 0           | 0          |            | Cover of payment processor fee for refund   |
| PAYMENT_PROCESSOR_COVER | CREDIT | true     | false  | Wise           | Scouts d'Arlon | Wise | 75     | USD      | 0           | 0          |            | Cover of payment processor fee for refund   |
| HOST_FEE                | DEBIT  | true     | false  | Scouts d'Arlon | Wise           | Wise | -250   | USD      | 0           | 0          |            | Refund of \\"Host Fee\\"                        |
| HOST_FEE                | CREDIT | true     | false  | Wise           | Scouts d'Arlon | Wise | 250    | USD      | 0           | 0          |            | Refund of \\"Host Fee\\"                        |
| TAX                     | DEBIT  | true     | false  | Scouts d'Arlon | Other Tax      | NULL | -100   | USD      | 0           | 0          |            | Refund of \\"Other Tax tax\\"                   |
| TAX                     | CREDIT | true     | false  | Other Tax      | Scouts d'Arlon | Wise | 100    | USD      | 0           | 0          |            | Refund of \\"Other Tax tax\\"                   |
| CONTRIBUTION            | DEBIT  | true     | false  | Xavier Damman  | Scouts d'Arlon | Wise | -5000  | USD      | 250         | 0          |            | Refund of \\"Monthly subscription to Webpack\\" |
| CONTRIBUTION            | CREDIT | true     | false  | Scouts d'Arlon | Xavier Damman  | NULL | 4750   | USD      | 250         | 0          |            | Refund of \\"Monthly subscription to Webpack\\" |"
`;

exports[`server/lib/payments createRefundTransaction partial refunds works with multi-currency 1`] = `
"
| kind                    | type   | isRefund | isDebt | From           | To             | Host | amount | currency | platformFee | paymentFee | Settlement | description                                 |
| ----------------------- | ------ | -------- | ------ | -------------- | -------------- | ---- | ------ | -------- | ----------- | ---------- | ---------- | ------------------------------------------- |
| HOST_FEE                | DEBIT  | false    | false  | Wise           | Scouts d'Arlon | Wise | -227   | EUR      | 0           | 0          |            | Host Fee                                    |
| HOST_FEE                | CREDIT | false    | false  | Scouts d'Arlon | Wise           | Wise | 227    | EUR      | 0           | 0          |            | Host Fee                                    |
| TAX                     | DEBIT  | false    | false  | Other Tax      | Scouts d'Arlon | Wise | -100   | EUR      | 0           | 0          |            | Other Tax tax                               |
| TAX                     | CREDIT | false    | false  | Scouts d'Arlon | Other Tax      | NULL | 100    | EUR      | 0           | 0          |            | Other Tax tax                               |
| PAYMENT_PROCESSOR_FEE   | DEBIT  | false    | false  | Stripe         | Scouts d'Arlon | Wise | -159   | EUR      | 0           | 0          |            | Stripe payment processor fee                |
| PAYMENT_PROCESSOR_FEE   | CREDIT | false    | false  | Scouts d'Arlon | Stripe         | NULL | 159    | EUR      | 0           | 0          |            | Stripe payment processor fee                |
| CONTRIBUTION            | DEBIT  | false    | false  | Scouts d'Arlon | Xavier Damman  | NULL | -4773  | EUR      | -250        | 0          |            | Monthly subscription to Webpack             |
| CONTRIBUTION            | CREDIT | false    | false  | Xavier Damman  | Scouts d'Arlon | Wise | 5000   | EUR      | -250        | 0          |            | Monthly subscription to Webpack             |
| PAYMENT_PROCESSOR_FEE   | DEBIT  | true     | false  | Scouts d'Arlon | Stripe         | NULL | -91    | EUR      | 0           | 0          |            | Refund of \\"Stripe payment processor fee\\"    |
| PAYMENT_PROCESSOR_FEE   | CREDIT | true     | false  | Stripe         | Scouts d'Arlon | Wise | 91     | EUR      | 0           | 0          |            | Refund of \\"Stripe payment processor fee\\"    |
| PAYMENT_PROCESSOR_COVER | DEBIT  | true     | false  | Scouts d'Arlon | Wise           | NULL | -64    | EUR      | 0           | 0          |            | Cover of payment processor fee for refund   |
| PAYMENT_PROCESSOR_COVER | CREDIT | true     | false  | Wise           | Scouts d'Arlon | Wise | 64     | EUR      | 0           | 0          |            | Cover of payment processor fee for refund   |
| HOST_FEE                | DEBIT  | true     | false  | Scouts d'Arlon | Wise           | Wise | -227   | EUR      | 0           | 0          |            | Refund of \\"Host Fee\\"                        |
| HOST_FEE                | CREDIT | true     | false  | Wise           | Scouts d'Arlon | Wise | 227    | EUR      | 0           | 0          |            | Refund of \\"Host Fee\\"                        |
| TAX                     | DEBIT  | true     | false  | Scouts d'Arlon | Other Tax      | NULL | -100   | EUR      | 0           | 0          |            | Refund of \\"Other Tax tax\\"                   |
| TAX                     | CREDIT | true     | false  | Other Tax      | Scouts d'Arlon | Wise | 100    | EUR      | 0           | 0          |            | Refund of \\"Other Tax tax\\"                   |
| CONTRIBUTION            | DEBIT  | true     | false  | Xavier Damman  | Scouts d'Arlon | Wise | -5000  | EUR      | 250         | 0          |            | Refund of \\"Monthly subscription to Webpack\\" |
| CONTRIBUTION            | CREDIT | true     | false  | Scouts d'Arlon | Xavier Damman  | NULL | 4773   | EUR      | 250         | 0          |            | Refund of \\"Monthly subscription to Webpack\\" |"
`;

exports[`server/lib/payments createRefundTransaction should allow collective to start a refund 1`] = `
"
| kind                    | type   | isRefund | isDebt | From           | To             | Host | amount | currency | platformFee | paymentFee | Settlement | description                                 |
| ----------------------- | ------ | -------- | ------ | -------------- | -------------- | ---- | ------ | -------- | ----------- | ---------- | ---------- | ------------------------------------------- |
| HOST_FEE                | DEBIT  | false    | false  | Wise           | Scouts d'Arlon | Wise | -250   | USD      | 0           | 0          |            | Host Fee                                    |
| HOST_FEE                | CREDIT | false    | false  | Scouts d'Arlon | Wise           | Wise | 250    | USD      | 0           | 0          |            | Host Fee                                    |
| TAX                     | DEBIT  | false    | false  | Other Tax      | Scouts d'Arlon | Wise | -100   | USD      | 0           | 0          |            | Other Tax tax                               |
| TAX                     | CREDIT | false    | false  | Scouts d'Arlon | Other Tax      | NULL | 100    | USD      | 0           | 0          |            | Other Tax tax                               |
| PAYMENT_PROCESSOR_FEE   | DEBIT  | false    | false  | Stripe         | Scouts d'Arlon | Wise | -175   | USD      | 0           | 0          |            | Stripe payment processor fee                |
| PAYMENT_PROCESSOR_FEE   | CREDIT | false    | false  | Scouts d'Arlon | Stripe         | NULL | 175    | USD      | 0           | 0          |            | Stripe payment processor fee                |
| CONTRIBUTION            | DEBIT  | false    | false  | Scouts d'Arlon | Xavier Damman  | NULL | -4750  | USD      | -250        | 0          |            | Monthly subscription to Webpack             |
| CONTRIBUTION            | CREDIT | false    | false  | Xavier Damman  | Scouts d'Arlon | Wise | 5000   | USD      | -250        | 0          |            | Monthly subscription to Webpack             |
| PAYMENT_PROCESSOR_COVER | DEBIT  | true     | false  | Scouts d'Arlon | Wise           | NULL | -175   | USD      | 0           | 0          |            | Cover of payment processor fee for refund   |
| PAYMENT_PROCESSOR_COVER | CREDIT | true     | false  | Wise           | Scouts d'Arlon | Wise | 175    | USD      | 0           | 0          |            | Cover of payment processor fee for refund   |
| HOST_FEE                | DEBIT  | true     | false  | Scouts d'Arlon | Wise           | Wise | -250   | USD      | 0           | 0          |            | Refund of \\"Host Fee\\"                        |
| HOST_FEE                | CREDIT | true     | false  | Wise           | Scouts d'Arlon | Wise | 250    | USD      | 0           | 0          |            | Refund of \\"Host Fee\\"                        |
| TAX                     | DEBIT  | true     | false  | Scouts d'Arlon | Other Tax      | NULL | -100   | USD      | 0           | 0          |            | Refund of \\"Other Tax tax\\"                   |
| TAX                     | CREDIT | true     | false  | Other Tax      | Scouts d'Arlon | Wise | 100    | USD      | 0           | 0          |            | Refund of \\"Other Tax tax\\"                   |
| CONTRIBUTION            | DEBIT  | true     | false  | Xavier Damman  | Scouts d'Arlon | Wise | -5000  | USD      | 250         | 0          |            | Refund of \\"Monthly subscription to Webpack\\" |
| CONTRIBUTION            | CREDIT | true     | false  | Scouts d'Arlon | Xavier Damman  | NULL | 4750   | USD      | 250         | 0          |            | Refund of \\"Monthly subscription to Webpack\\" |"
`;

exports[`server/lib/payments createRefundTransaction should be able to refund only the host fee 1`] = `
"
| kind         | type   | isRefund | isDebt | From       | To         | Host | amount | currency | platformFee | paymentFee | Settlement | description                |
| ------------ | ------ | -------- | ------ | ---------- | ---------- | ---- | ------ | -------- | ----------- | ---------- | ---------- | -------------------------- |
| HOST_FEE     | DEBIT  | false    | false  | Host       | Collective | Host | -500   | USD      | 0           | 0          |            | Host Fee                   |
| HOST_FEE     | CREDIT | false    | false  | Collective | Host       | Host | 500    | USD      | 0           | 0          |            | Host Fee                   |
| CONTRIBUTION | DEBIT  | false    | false  | Collective | User       | NULL | -5000  | USD      | 0           | 0          |            | Contribution to Collective |
| CONTRIBUTION | CREDIT | false    | false  | User       | Collective | Host | 5000   | USD      | 0           | 0          |            | Contribution to Collective |
| HOST_FEE     | DEBIT  | true     | false  | Collective | Host       | Host | -500   | USD      | 0           | 0          |            | Refund of \\"Host Fee\\"       |
| HOST_FEE     | CREDIT | true     | false  | Host       | Collective | Host | 500    | USD      | 0           | 0          |            | Refund of \\"Host Fee\\"       |"
`;

exports[`server/lib/payments createRefundTransaction should be able to refund only the platform tip 1`] = `
"
| kind         | type   | isRefund | isDebt | From            | To              | Host            | amount | currency | platformFee | paymentFee | Settlement | description                                                        |
| ------------ | ------ | -------- | ------ | --------------- | --------------- | --------------- | ------ | -------- | ----------- | ---------- | ---------- | ------------------------------------------------------------------ |
| PLATFORM_TIP | DEBIT  | false    | false  | Open Collective | User            | NULL            | -500   | USD      | 0           | 0          |            | Financial contribution to the Open Collective Platform             |
| PLATFORM_TIP | CREDIT | false    | false  | User            | Open Collective | Open Collective | 500    | USD      | 0           | 0          |            | Financial contribution to the Open Collective Platform             |
| CONTRIBUTION | DEBIT  | false    | false  | Collective      | User            | NULL            | -5000  | USD      | 0           | 0          |            | Contribution to Collective                                         |
| CONTRIBUTION | CREDIT | false    | false  | User            | Collective      | Host            | 5000   | USD      | 0           | 0          |            | Contribution to Collective                                         |
| PLATFORM_TIP | DEBIT  | true     | false  | User            | Open Collective | Open Collective | -500   | USD      | 0           | 0          |            | Refund of \\"Financial contribution to the Open Collective Platform\\" |
| PLATFORM_TIP | CREDIT | true     | false  | Open Collective | User            | NULL            | 500    | USD      | 0           | 0          |            | Refund of \\"Financial contribution to the Open Collective Platform\\" |"
`;

exports[`server/lib/payments createRefundTransaction should not create payment processor fee cover for contribution to the host itself 1`] = `
"
| kind                  | type   | isRefund | isDebt | From                    | To                      | Host | amount | currency | platformFee | paymentFee | Settlement | description                                   |
| --------------------- | ------ | -------- | ------ | ----------------------- | ----------------------- | ---- | ------ | -------- | ----------- | ---------- | ---------- | --------------------------------------------- |
| PAYMENT_PROCESSOR_FEE | DEBIT  | false    | false  | Other Payment Processor | Host                    | Host | -175   | USD      | 0           | 0          |            | Other Payment Processor payment processor fee |
| PAYMENT_PROCESSOR_FEE | CREDIT | false    | false  | Host                    | Other Payment Processor | NULL | 175    | USD      | 0           | 0          |            | Other Payment Processor payment processor fee |
| CONTRIBUTION          | DEBIT  | false    | false  | Host                    | User                    | NULL | -5000  | USD      | 0           | 0          |            | Contribution to Open Collective               |
| CONTRIBUTION          | CREDIT | false    | false  | User                    | Host                    | Host | 5000   | USD      | 0           | 0          |            | Contribution to Open Collective               |
| CONTRIBUTION          | DEBIT  | true     | false  | User                    | Host                    | Host | -5000  | USD      | 0           | 0          |            | Refund of \\"Contribution to Open Collective\\"   |
| CONTRIBUTION          | CREDIT | true     | false  | Host                    | User                    | NULL | 5000   | USD      | 0           | 0          |            | Refund of \\"Contribution to Open Collective\\"   |"
`;

exports[`server/lib/payments createRefundTransaction should refund platform fees on top when refunding original transaction 1`] = `
"
| kind                    | type   | isRefund | isDebt | From                    | To                      | Host            | amount | currency | platformFee | paymentFee | Settlement | description                                                         |
| ----------------------- | ------ | -------- | ------ | ----------------------- | ----------------------- | --------------- | ------ | -------- | ----------- | ---------- | ---------- | ------------------------------------------------------------------- |
| PLATFORM_TIP            | DEBIT  | false    | false  | Open Collective         | User                    | NULL            | -500   | USD      | 0           | 0          |            | Financial contribution to the Open Collective Platform              |
| PLATFORM_TIP            | CREDIT | false    | false  | User                    | Open Collective         | Open Collective | 500    | USD      | 0           | 0          |            | Financial contribution to the Open Collective Platform              |
| PLATFORM_TIP_DEBT       | DEBIT  | false    | true   | Host                    | Open Collective         | Open Collective | -500   | USD      | 0           | 0          |            | Platform Tip collected for the Open Collective platform             |
| PLATFORM_TIP_DEBT       | CREDIT | false    | true   | Open Collective         | Host                    | Host            | 500    | USD      | 0           | 0          |            | Platform Tip collected for the Open Collective platform             |
| HOST_FEE                | DEBIT  | false    | false  | Host                    | Collective              | Host            | -250   | USD      | 0           | 0          |            | Host Fee                                                            |
| HOST_FEE                | CREDIT | false    | false  | Collective              | Host                    | Host            | 250    | USD      | 0           | 0          |            | Host Fee                                                            |
| PAYMENT_PROCESSOR_FEE   | DEBIT  | false    | false  | Other Payment Processor | Collective              | Host            | -175   | USD      | 0           | 0          |            | Other Payment Processor payment processor fee                       |
| PAYMENT_PROCESSOR_FEE   | CREDIT | false    | false  | Collective              | Other Payment Processor | NULL            | 175    | USD      | 0           | 0          |            | Other Payment Processor payment processor fee                       |
| CONTRIBUTION            | DEBIT  | false    | false  | Collective              | User                    | NULL            | -4500  | USD      | 0           | 0          |            | Monthly subscription to Webpack                                     |
| CONTRIBUTION            | CREDIT | false    | false  | User                    | Collective              | Host            | 4500   | USD      | 0           | 0          |            | Monthly subscription to Webpack                                     |
| PLATFORM_TIP            | DEBIT  | true     | false  | User                    | Open Collective         | Open Collective | -500   | USD      | 0           | 0          |            | Refund of \\"Financial contribution to the Open Collective Platform\\"  |
| PLATFORM_TIP            | CREDIT | true     | false  | Open Collective         | User                    | NULL            | 500    | USD      | 0           | 0          |            | Refund of \\"Financial contribution to the Open Collective Platform\\"  |
| PLATFORM_TIP_DEBT       | DEBIT  | true     | true   | Open Collective         | Host                    | Host            | -500   | USD      | 0           | 0          |            | Refund of \\"Platform Tip collected for the Open Collective platform\\" |
| PLATFORM_TIP_DEBT       | CREDIT | true     | true   | Host                    | Open Collective         | Open Collective | 500    | USD      | 0           | 0          |            | Refund of \\"Platform Tip collected for the Open Collective platform\\" |
| PAYMENT_PROCESSOR_COVER | DEBIT  | true     | false  | Collective              | Host                    | Host            | -175   | USD      | 0           | 0          |            | Cover of payment processor fee for refund                           |
| PAYMENT_PROCESSOR_COVER | CREDIT | true     | false  | Host                    | Collective              | Host            | 175    | USD      | 0           | 0          |            | Cover of payment processor fee for refund                           |
| HOST_FEE                | DEBIT  | true     | false  | Collective              | Host                    | Host            | -250   | USD      | 0           | 0          |            | Refund of \\"Host Fee\\"                                                |
| HOST_FEE                | CREDIT | true     | false  | Host                    | Collective              | Host            | 250    | USD      | 0           | 0          |            | Refund of \\"Host Fee\\"                                                |
| CONTRIBUTION            | DEBIT  | true     | false  | User                    | Collective              | Host            | -4500  | USD      | 0           | 0          |            | Refund of \\"Monthly subscription to Webpack\\"                         |
| CONTRIBUTION            | CREDIT | true     | false  | Collective              | User                    | NULL            | 4500   | USD      | 0           | 0          |            | Refund of \\"Monthly subscription to Webpack\\"                         |"
`;
